k8s/overlays/aws/patches/aws-replica-tuning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-service
  namespace: event-pipeline
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: event-pipeline
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
  namespace: event-pipeline
spec:
  replicas: 1
