k8s/overlays/aws/patches/delete-minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: event-pipeline
$patch: delete
