k8s/overlays/aws/patches/delete-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: event-pipeline
$patch: delete
