k8s/overlays/aws/patches/delete-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: event-pipeline
$patch: delete
