k8s/overlays/aws/patches/worker-deployment-s3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: event-pipeline
spec:
  template:
    spec:
      containers:
        - name: worker-service
