k8s/overlays/aws/patches/delete-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: event-pipeline
$patch: delete
