k8s/overlays/aws/patches/delete-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: event-pipeline
$patch: delete
