k8s/overlays/aws/patches/delete-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: event-pipeline
$patch: delete
